// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagList > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":r2:"
        aria-describedby=":r2:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-24 {
  display: inherit;
}

.emotion-24[data-container-full-width="true"] {
  width: 100%;
}

.emotion-26 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.emotion-29 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 14.5rem;
  max-height: 100px;
  overflow: auto;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  padding: 1rem;
  width: 20rem;
  max-width: 20rem;
  text-align: initial;
  background: #ffffff;
  box-shadow: 0px 4px 32px 8px #151a2d5c;
}

.emotion-29[data-animated="true"] {
  -webkit-animation: 0ms animation-0 forwards;
  animation: 0ms animation-0 forwards;
}

.emotion-29[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-29[data-visible-in-dom="false"] {
  display: none;
}

.emotion-29[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  color: #3f4250;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-35 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-37:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-37:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-37:hover,
.emotion-37:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-39 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-39 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            very
          </span>
        </span>
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            item
          </span>
        </span>
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            item
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            item
          </span>
        </span>
      </div>
      <div
        aria-controls=":r23:"
        aria-describedby=":r23:"
        class="emotion-24 emotion-25"
        tabindex="-1"
      >
        <span
          class="emotion-26 emotion-27"
          data-testid="taglist-open"
        >
          +51
        </span>
        <div
          class="emotion-28 emotion-29 emotion-30"
          data-animated="false"
          data-has-arrow="true"
          id=":r23:"
          role="dialog"
          style="opacity: 1;"
        >
          <div
            class="emotion-31 emotion-32"
          >
            <div
              class="emotion-33 emotion-34"
            >
              <h3
                class="emotion-35 emotion-8"
              >
                Additional
              </h3>
              <button
                aria-label="close"
                class="emotion-37 emotion-38"
                type="button"
              >
                <svg
                  class="emotion-39 emotion-40"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="emotion-41 emotion-3"
            >
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  item
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  tooltip
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  scaleway
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  paris
                </span>
              </span>
              <span
                class="emotion-4 emotion-5"
              >
                <span
                  class="emotion-6 emotion-7 emotion-8"
                >
                  cloud
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 0px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway is the best cloud provider ever invented
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":ri:"
        aria-describedby=":ri:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-9 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls=":r11:"
          aria-describedby=":r11:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              scaleway
            </span>
          </button>
        </div>
        <div
          aria-controls=":r13:"
          aria-describedby=":r13:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="ellipsed emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              cloud
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            cloud
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-14 {
  display: inherit;
}

.emotion-14[data-container-full-width="true"] {
  width: 100%;
}

.emotion-16 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        aria-controls=":re:"
        aria-describedby=":re:"
        class="emotion-14 emotion-15"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-17"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":rn:"
        aria-describedby=":rn:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-9 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls=":r1b:"
          aria-describedby=":r1b:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              scaleway
            </span>
          </button>
        </div>
        <div
          aria-controls=":r1d:"
          aria-describedby=":r1d:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="ellipsed emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              cloud
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-14 {
  display: inherit;
}

.emotion-14[data-container-full-width="true"] {
  width: 100%;
}

.emotion-16 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        aria-controls=":rs:"
        aria-describedby=":rs:"
        class="emotion-14 emotion-15"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-17"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`TagList > renders correctly with placement 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":r5:"
        aria-describedby=":r5:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
